[package]
name = "at_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.96"
native-tls = "0.2.11"
regex = "1.8.3"
rsa = "0.9.2"
rust-crypto = "0.2.36"
rand = "0.8.5"
base64 = "0.21.0"
der = "0.7.6"
hex = "0.4.3"
block-padding = "0.3.3"
generic-array = "0.14.7"
