workspace = { members = [ "at_chops", "at_tls"] }
[package]
name = "at_rust"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
crypto = "0.5.1"
anyhow = "1.0.79"
serde_json = "1.0.96"
regex = "1.8.3"
rsa = { version = "0.9.2", features = ["sha2"] }
rand = "0.8.5"
base64 = "0.21.0"
der = "0.7.6"
hex = "0.4.3"
block-padding = "0.3.3"
generic-array = "0.14.7"
sha256 = "1.1.3"
log = "0.4.19"

[dev-dependencies]
env_logger = "0.10.0"
native-tls = "0.2.11"
