workspace = { members = [
    "at_chops",
    "at_errors",
    "at_records",
    "at_secrets",
    "at_sign",
    "at_tls",
    "at_verbs",
] }
[package]
name = "at_rust"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
at_chops = { path = "at_chops" }
at_errors = { path = "at_errors" }
at_records = { path = "at_records" }
at_secrets = { path = "at_secrets" }
at_sign = { path = "at_sign" }
at_tls = { path = "at_tls" }
at_verbs = { path = "at_verbs" }
anyhow = "1.0.79"
log = "0.4.20"


[dev-dependencies]
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.10.0"
