[package]
name = "at_crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
anyhow = "1.0.79"
base64 = "0.21.0"
crypto = "0.5.1"
rand = "0.8.5"
rsa = { version = "0.9.2", features = ["sha2"] }
