[package]
name = "at_verbs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
at_chops = { path = "../at_chops" }
at_errors = { path = "../at_errors" }
at_sign = { path = "../at_sign" }
at_records = { path = "../at_records" }
at_tls = { path = "../at_tls" }
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
